# ncnn_face_rec

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  build.sh
cmake/: generic.cmake  omp.cmake  third_party.cmake
resource/: config.json
source/: CMakeLists.txt  config.h.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  status_code.h
source/lite/: backend.h  config.h  constants.h  lite.ai.defs.h  lite.ai.headers.h  lite.h  models.h  pipeline.h  types.h  utils.cpp  utils.h
source/lite/mnn/core/: mnn_core.h  mnn_handler.h
source/lite/mnn/cv/: mnn_age_googlenet.h  mnn_backgroundmattingv2.h  mnn_cava_combined_face.h  mnn_cava_ghost_arcface.h  mnn_center_loss_face.h  mnn_colorizer.h  mnn_deeplabv3_resnet101.h  mnn_densenet.h  mnn_efficient_emotion7.h  mnn_efficient_emotion8.h  mnn_efficientnet_lite4.h  mnn_emotion_ferplus.h  mnn_face_hair_seg.h  mnn_face_landmarks_1000.h  mnn_face_parsing_bisenet.h  mnn_faceboxes.h  mnn_faceboxesv2.h  mnn_facenet.h  mnn_fast_portrait_seg.h  mnn_fast_style_transfer.h  mnn_fcn_resnet101.h  mnn_female_photo2cartoon.h  mnn_focal_arcface.h  mnn_focal_asia_arcface.h  mnn_fsanet.h  mnn_gender_googlenet.h  mnn_ghostnet.h  mnn_glint_arcface.h  mnn_glint_cosface.h  mnn_glint_partial_fc.h  mnn_hair_seg.h  mnn_hdrdnet.h  mnn_head_seg.h  mnn_ibnnet.h  mnn_insectdet.h  mnn_insectid.h  mnn_mg_matting.h  mnn_mobile_emotion7.h  mnn_mobile_facenet.h  mnn_mobile_hair_seg.h  (+42 more)
source/lite/ncnn/core/: ncnn_config.h  ncnn_core.h  ncnn_defs.h  ncnn_handler.cpp  ncnn_handler.h
source/lite/ncnn/cv/: ncnn_age_googlenet.h  ncnn_cava_combined_face.h  ncnn_cava_ghost_arcface.h  ncnn_center_loss_face.h  ncnn_colorizer.h  ncnn_deeplabv3_resnet101.h  ncnn_densenet.h  ncnn_efficient_emotion7.h  ncnn_efficient_emotion8.h  ncnn_efficientnet_lite4.h  ncnn_emotion_ferplus.h  ncnn_face_landmarks_1000.h  ncnn_face_parsing_bisenet.h  ncnn_faceboxes.h  ncnn_faceboxesv2.h  ncnn_facenet.h  ncnn_fast_style_transfer.h  ncnn_fcn_resnet101.h  ncnn_female_photo2cartoon.h  ncnn_focal_arcface.h  ncnn_focal_asia_arcface.h  ncnn_gender_googlenet.h  ncnn_ghostnet.h  ncnn_glint_arcface.h  ncnn_glint_cosface.h  ncnn_glint_partial_fc.h  ncnn_hdrdnet.h  ncnn_ibnnet.h  ncnn_insectid.h  ncnn_mobile_emotion7.h  ncnn_mobile_facenet.cpp  ncnn_mobile_facenet.h  ncnn_mobilenetv2.h  ncnn_mobilenetv2_68.h  ncnn_mobilenetv2_se_68.h  ncnn_mobilese_focal_face.h  ncnn_modnet.h  ncnn_nanodet.h  ncnn_nanodet_depreciated.h  ncnn_nanodet_efficientdet_lite_depreciated.h  (+31 more)
source/lite/ort/core/: ort_core.h  ort_handler.h  ort_utils.h
source/lite/ort/cv/: age_googlenet.h  backgroundmattingv2.h  backgroundmattingv2_dyn.h  cava_combined_face.h  cava_ghost_arcface.h  center_loss_face.h  colorizer.h  deeplabv3_resnet101.h  densenet.h  efficient_emotion7.h  efficient_emotion8.h  efficientdet.h  efficientdet_d7.h  efficientdet_d8.h  efficientnet_lite4.h  emotion_ferplus.h  face_hair_seg.h  face_landmarks_1000.h  face_parsing_bisenet.h  face_parsing_bisenet_dyn.h  faceboxes.h  faceboxesv2.h  facenet.h  fast_portrait_seg.h  fast_style_transfer.h  fcn_resnet101.h  female_photo2cartoon.h  focal_arcface.h  focal_asia_arcface.h  fsanet.h  gender_googlenet.h  ghostnet.h  glint_arcface.h  glint_cosface.h  glint_partial_fc.h  hair_seg.h  hardnet.h  head_seg.h  ibnnet.h  insectdet.h  (+60 more)
source/lite/tnn/core/: tnn_core.h  tnn_handler.h
source/lite/tnn/cv/: tnn_age_googlenet.h  tnn_backgroundmattingv2.h  tnn_cava_combined_face.h  tnn_cava_ghost_arcface.h  tnn_center_loss_face.h  tnn_colorizer.h  tnn_deeplabv3_resnet101.h  tnn_densenet.h  tnn_efficient_emotion7.h  tnn_efficient_emotion8.h  tnn_efficientnet_lite4.h  tnn_emotion_ferplus.h  tnn_face_landmarks_1000.h  tnn_face_parsing_bisenet.h  tnn_faceboxes.h  tnn_faceboxesv2.h  tnn_facenet.h  tnn_fast_style_transfer.h  tnn_fcn_resnet101.h  tnn_female_photo2cartoon.h  tnn_focal_arcface.h  tnn_focal_asia_arcface.h  tnn_fsanet.h  tnn_gender_googlenet.h  tnn_ghostnet.h  tnn_glint_arcface.h  tnn_glint_cosface.h  tnn_glint_partial_fc.h  tnn_hdrdnet.h  tnn_head_seg.h  tnn_ibnnet.h  tnn_insectdet.h  tnn_insectid.h  tnn_mg_matting.h  tnn_mobile_emotion7.h  tnn_mobile_facenet.h  tnn_mobilenetv2.h  tnn_mobilenetv2_68.h  tnn_mobilenetv2_se_68.h  tnn_mobilese_focal_face.h  (+33 more)
source/request/: request.cpp  request.h
source/utils/: utils.cpp  utils.h
(+8 files in other folders)
